HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/RefinementDiagnosticsOwnership/Source/Main.uv
//! Rejected refinement specimen for refinement diagnostic ownership.

public procedure refinementDiagnosticsOwnershipPredicate() -> bool {
    return true
}

public type RefinementDiagnosticsOwnershipType =
    bool |: { self && refinementDiagnosticsOwnershipPredicate() }
